Fix code style